# cinema-pro-hdr

./: .gitignore  .gitmodules  CMakeLists.txt  Cinema_Pro_HDR_业内FAQ_技术与商业答疑全辑_2025-10-23.md  Cinema_Pro_HDR_制片-母版-放映_技术链路与商业落地白皮书_2025-10-23.md  Cinema_Pro_HDR_实施计划_小白解读报告_2025-10-23.md  Cinema_Pro_HDR_工程落地白话书_全栈落地方案_2025-10-23.md  DCTL_INSTALLATION_SUCCESS.md  README.md  README_assets.md  build.sh
.kiro/specs/cinema-pro-hdr/: design.md  requirements.md  tasks.md
.kiro/steering/: documentation_standards.md
assets/: cliplist.json
docs/: color_space_implementation.md  error_handling_system.md  refmath_usage.md
golden/: validation_report.md
golden/frames/: metadata.json
include/cinema_pro_hdr/: color_space.h  core.h  error_handler.h  highlight_detail.h  processor.h  tone_mapping.h
scripts/: build_dctl.sh  ci_regression_test.py  compute_matrices.py  generate_refmath.py  requirements.txt  validate_assets.py
src/core/: color_space.cpp  cph_params.cpp  cph_processor.cpp  error_handler.cpp  error_report.cpp  highlight_detail.cpp  image.cpp  pq_functions.cpp  statistics.cpp  tone_mapping.cpp
src/dctl/: README.md  cinema_pro_hdr.dctl  cinema_pro_hdr_optimized.dctl  parameter_mapping.h  resolve_usage_example.md  statistics_collector.cpp  test_dctl_validation.cpp
src/ofx/: CMakeLists.txt  Info.plist  cinema_pro_hdr_plugin.cpp
src/tools/: CMakeLists.txt  error_handler_demo.cpp
test_results/: regression_test_report.json
tests/: CMakeLists.txt  test_color_space.cpp  test_color_space_enhanced.cpp  test_cph_params.cpp  test_error_handler.cpp  test_error_report.cpp  test_framework.h  test_highlight_detail.cpp  test_image.cpp  test_main.cpp  test_numerical_precision.cpp  test_oklab_saturation.cpp  test_parameter_validation.cpp  test_pq_functions.cpp  test_processor.cpp  test_statistics.cpp  test_tone_mapping.cpp
专利/: Cinema Pro HDR v0.2 发明技术披露书.html  Cinema Pro HDR v0.2 发明技术披露书.md
