# Command Line Tools CMakeLists.txt
# This will be implemented in later tasks

message(STATUS "Tools directory created - implementation pending")

# Placeholder for command line tools
# add_executable(cph_lut_baker ${BAKER_SOURCES})
# add_executable(cph_json_check ${VALIDATOR_SOURCES})
# target_link_libraries(cph_lut_baker cinema_pro_hdr_core)
# target_link_libraries(cph_json_check cinema_pro_hdr_core)